# nanogpt

./: .gitignore  Cargo.toml  Makefile  config.toml
crates/nanogpt/: Cargo.toml
crates/nanogpt/src/: cli.rs  dataset.rs  main.rs  stream.rs  tokenizer.rs  utils.rs
crates/nanogpt/src/model/: block.rs  mod.rs
crates/nanotok/: Cargo.toml
crates/nanotok/fixtures/: test_data.txt  test_data_2.txt
crates/nanotok/src/: bin.rs  lib.rs
crates/nanotok/src/tokenizers/: basic.rs  gpt4.rs  mod.rs  regex.rs
data/: simple.txt
models/tokenizers/: gpt4-512-tokenizer.json
src/: cli.rs  dataset.rs  main.rs  model.rs  stream.rs  utils.rs  vocab.rs
src/model/: block.rs  head.rs  mod.rs  norm.rs
