[package]
name = "nanogpt"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
log = "0.4.22"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
