[package]
name = "nanogpt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2", features = ["cuda"]}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.7.2", features = ["cuda"] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2", features = ["metal"]}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.7.2", features = ["metal"] }