[package]
name = "nanogpt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
nanotok = { path = "../nanotok" }
pretty_env_logger = { workspace = true }
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { workspace = true }
tokio = { workspace = true }
toml = "0.8.19"

[target.'cfg(target_os = "windows")'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2", features = ["cuda"]}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.7.2", features = ["cuda"] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2", features = ["metal"]}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.7.2", features = ["metal"] }