[package]
name = "nanotok"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.23", features = ["derive"] }
fancy-regex = "0.14.0"
indexmap = "2.6.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tokenizers = { version = "0.21.0", features = ["http"] }
tokio = { version = "1", features = ["full"] }

[lib]
name = "nanotok"
path = "src/lib.rs"

[[bin]]
name = "nanotok-cli"
path = "src/bin.rs"


[dev-dependencies]
# Only use to compare our implementation with the actual
tiktoken-rs = "0.6.0"