[package]
name = "nanotok"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
fancy-regex = "0.14.0"
indexmap = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
# Only use to compare our implementation with the actual
tiktoken-rs = "0.6.0"
tokenizers = { version = "0.21.0", features = ["http"] }
tokio =  { workspace = true }

[lib]
name = "nanotok"
path = "src/lib.rs"

[[bin]]
name = "nanotok-cli"
path = "src/bin.rs"